methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:9: error: object java.awt.Color is not a value
    if(getCouleurSol()==Color){
                        ^